[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sb3-plus"
version = "0.1.1"
authors = [
  { name="Adyson Maia", email="adyson.maia@gmail.com" },
]
description = "Additional DRL algorithms to the StableBaselines3 lib"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/adysonmaia/sb3-plus"