[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sb3-plus"
version = "0.1.6"
authors = [
  { name="Adyson Maia", email="adyson.maia@gmail.com" },
]
description = "Additional RL algorithms to the StableBaselines3 lib"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'stable-baselines3>=2.0.0',
]

[project.urls]
"Homepage" = "https://github.com/adysonmaia/sb3-plus"

[tool.setuptools.packages.find]
include = ['sb3_plus*']